--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,60 +1,45 @@
-name: Release
+name: NPM publish CD workflow
 
 on:
-  push:
-    tags:
-      # Push events to matching v*, i.e. v1.0, v20.15.10
-      - 'v*'
+  release:
+    # This specifies that the build will be triggered when we publish a release
+    types: [published]
 
 jobs:
   build:
-    name: Create Release
+
+    # Run on latest version of ubuntu
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install dependencies
-        run: yarn install --offline
-
-      - name: Build project
-        run: yarn build
-
-      - name: Run Continuous Integration checks
-        run: yarn ci-check
-
-      - name: Publish packages under the `next` dist tag
-        run: yarn lerna publish from-package --dist-tag next --yes
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Prepare artifacts for release
-        run: |
-          zip -r --junk-paths carbon-elements.sketchplugin.zip packages/sketch/carbon-elements.sketchplugin
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: true
-
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./carbon-elements.sketchplugin.zip
-          asset_name: carbon-elements.sketchplugin.zip
-          asset_content_type: application/zip
+    - uses: actions/checkout@v2
+      with:
+        # "ref" specifies the branch to check out.
+        # "github.event.release.target_commitish" is a global variable and specifies the branch the release targeted
+        ref: ${{ github.event.release.target_commitish }}
+    # install Node.js
+    - name: Use Node.js 12
+      uses: actions/setup-node@v1
+      with:
+        node-version: 12
+        # Specifies the registry, this field is required!
+        registry-url: https://npm.pkg.github.com/
+    # clean install of your projects' deps. We use "npm ci" to avoid package lock changes
+    - run: npm ci
+    # set up git since we will later push to the repo
+    - run: git config --global user.name "Franco Serio"
+    - run: git config --global user.email "francoagustinserio@gmail.com"
+    # upgrade npm version in package.json to the tag used in the release.
+    - run: npm version ${{ github.event.release.tag_name }}
+    # build the project
+    - run: npm run build
+    # publish to NPM -> there is one caveat, continue reading for the fix
+    - run: npm publish
+      env:
+        # Use a token to publish to NPM. See below for how to set it up
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_TOKEN }}
+    # push the version changes to GitHub
+    - run: git push
+      env:
+        # The secret is passed automatically. Nothing to configure.
+        github-token: ${{ secrets.GITHUB_TOKEN }}
