--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       working-directory: ${{env.working-directory}}
     # install dependencies.
     - name: Install dependencies
-      run: npm run install
+      run: npm install
       working-directory: ${{env.working-directory}}
     # build the project
     - name: Build
