--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "carbon-components",
+  "name": "@theamalgama/carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.19.0",
+  "version": "10.19.9",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
-  "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/components",
-  "bugs": "https://github.com/carbon-design-system/carbon/issues",
+  "repository": "https://github.com/theamalgama/carbon/tree/master/packages/components",
+  "bugs": "https://github.com/theamalgama/carbon/issues",
   "homepage": "https://www.carbondesignsystem.com/",
   "engines": {
     "node": ">=6.x"
@@ -94,8 +94,8 @@
     "bluebird": "~3.1.1",
     "browser-sync": "^2.26.3",
     "browserslist-config-carbon": "^10.5.0",
-    "carbon-components": "^9.0.0",
-    "carbon-components-react": "^6.0.0",
+    "@theamalgama/carbon-components": "^10.19.9",
+    "@theamalgama/carbon-components-react": "^6.0.0",
     "chokidar": "^2.0.0",
     "classnames": "^2.2.0",
     "commander": "^2.13.0",
