--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@theamalgama/carbon-components-react",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "v10.19.9",
+  "version": "10.19.9",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -33,8 +33,8 @@
     "snapshot": "build-storybook && percy-storybook --widths=320,1280"
   },
   "peerDependencies": {
-    "carbon-components": "^10.9.0",
-    "carbon-icons": "^7.0.7",
+    "@theamalgama/carbon-components": "^10.19.9",
+    "@theamalgama/carbon-icons": "^7.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
@@ -84,8 +84,8 @@
     "babel-plugin-react-docgen": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
     "browserslist-config-carbon": "^10.5.0",
-    "carbon-components": "^10.19.0",
-    "carbon-icons": "^7.0.5",
+    "@theamalgama/carbon-components": "^10.19.9",
+    "@theamalgama/carbon-icons": "^7.0.5",
     "chalk": "^2.3.0",
     "cli-table": "^0.3.0",
     "core-js": "^3.6.5",
