--- a/.yarnrc
+++ b/.yarnrc
@@ -6,3 +6,4 @@ lastUpdateCheck 1576080308559
 yarn-offline-mirror "./.yarn/offline-mirror"
 yarn-offline-mirror-pruning true
 yarn-path ".yarn/releases/yarn-1.22.4.js"
+registry "https://npm.pkg.github.com/theamalgama"
